# AIAgent

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml
app/agents/: personal_chief.py
notebooks/: test_agent.ipynb
